<resources>
    <string name="app_name">Photo Collage Maker Grid Photo</string>
    <string name="facebook_app_id" translatable="false">4059521101008955</string>
    <string name="facebook_client_token" translatable="false">40269ef5e99ed698b0e7c3cdff750e57</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_tag_line">Bringing Joy of Every Photo</string>
    <string name="text_edit">Edit</string>
    <string name="text_camera">Camera</string>
    <string name="camera_rationale">This app needs access to your camera so you can take pictures.</string>
    <string name="todo">TODO</string>
    <string name="ad_attribution" translatable="false">Ad</string>
    <string-array name="text_options">
        <item>Crop</item>
        <item>Filter</item>
        <item>Effect</item>
        <item>Adjust</item>
        <item>HSL</item>
        <item>Layer</item>
    </string-array>

    <string-array name="filters">
        <item>Color1</item>
        <item>Color2</item>
        <item>Duo</item>
        <item>Pink</item>
        <item>Fresh</item>
        <item>Euro</item>
        <item>Dark</item>
        <item>Ins</item>
        <item>Elegant</item>
        <item>Golden</item>
        <item>Tint</item>
        <item>Film</item>
        <item>Lomo</item>
        <item>Movie</item>
        <item>Retro</item>
        <item>BW</item>
    </string-array>

    <string-array name="effect_light">
        <item>Light1</item>
        <item>Light2</item>
        <item>Festival</item>
        <item>Love</item>
        <item>Prism</item>
        <item>Neon</item>
    </string-array>

    <string-array name="effect_texture">
        <item>Dust</item>
        <item>Stains</item>
        <item>Vintage</item>
        <item>Scratch</item>
    </string-array>

    <string-array name="effect_weather">
        <item>snow</item>
        <item>Cloud</item>
        <item>Fog</item>
        <item>Sunlight</item>
    </string-array>

    <string name="waring_out_of_memory">Not enough memory. Please remove images or your program will be crashed.!!!</string>
    <string name="txt_share">Let your true colors shine though Photo editor &amp; collage maker.
        \n\nDownload Now: https://bit.ly/3g3WUau</string>

    <!--TODO : Replace  Admob App ID here -->
    <string name="Admob_AppID">ca-app-pub-3940256099942544~3347511713</string>

    <!--TODO : Replace  Admob UNIT ID here -->
    <string name="Admob_adUnitId">ca-app-pub-3940256099942544/1033173712</string>

    <!--TODO : Replace  Facebook Ad ID here -->
    <string name="fb_adid">IMG_16_9_APP_INSTALL#YOUR_PLACEMENT_ID</string>

    <string name="background_image">Background Image</string>
    <string name="light_effect">Light Effect</string>
    <string name="resize">Resize</string>
    <string name="rotate">Rotate</string>
    <string name="_90">- 90°</string>
    <string name="crop">Crop</string>
    <string name="vertical">Vertical</string>
    <string name="horizontal">Horizontal</string>
    <string name="plus_90">+ 90°</string>
    <string name="close">Close</string>
    <string name="done">Done</string>
    <string name="blend">Blend</string>
    <string name="effect">Effect</string>
    <string name="light">Light</string>
    <string name="texture">Texture</string>
    <string name="weather">Weather</string>
    <string name="gallery">Gallery</string>
    <string name="hue">HUE</string>
    <string name="saturation">SATURATION</string>
    <string name="brightness">BRIGHTNESS</string>
    <string name="icon">Icon</string>
    <string name="text">Text</string>
    <string name="sticker">Sticker</string>
    <string name="border">Border</string>
    <string name="black_icon">Black Icon</string>
    <string name="border_blur">Border Blur</string>
    <string name="done_save">Done|Save</string>
    <string name="reset">Reset</string>
    <string name="tri_editor">Tri Editor</string>
    <string name="create_new">Create New</string>
    <string name="my_draft">My Draft</string>
    <string name="edit">Edit</string>
    <string name="ai_remove">AI Remove</string>
    <string name="templates">Templates</string>
    <string name="select_upto_10_photos">Select upto 10 photos</string>
    <string name="select_photos">Select photos</string>
    <string name="next">Next</string>
    <string name="all">All</string>
    <string name="camera">Camera</string>
    <string name="download">Download</string>
    <string name="save">Save</string>
    <string name="saved">Saved!</string>
    <string name="photo_filter">Photo Filter</string>
    <string name="try_new_template">Try New Template</string>
    <string name="layout">Layout</string>
    <string name="ratio">Ratio</string>
    <string name="background">Background</string>
    <string name="setting">Setting</string>
    <string name="change_language">Change Language</string>
    <string name="rate_app">Rate app</string>
    <string name="share_app">Share app</string>
    <string name="feedback">Feedback</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="gmail_not_install">Gmail not install</string>
    <string name="choose_language">Choose language</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="no_drafts_yet">No drafts yet</string>
    <string name="let_s_create_your_first_one">Let’s create your first one!</string>
    <string name="please_wait_loading">Please wait, Loading...</string>
    <string name="this_action_may_contain_advertisement">(This action may contain advertisement)</string>
    <string name="pictures">Pictures</string>
    <string name="recent">Recent</string>
    <string name="no_recent">No recent</string>
    <string name="see_all">See All</string>
    <string name="delete_drafts">Delete drafts</string>
    <string name="drafts_will_be_lost_if_you_unistall">Drafts will be lost if you unistall</string>
    <string name="delete">Delete</string>
    <string name="template">Template</string>
    <string name="replace">Replace</string>
    <string name="tap_photo_to_replace">Tap a photo to replace</string>
    <string name="replace_photos">Replace Photos</string>
    <string name="original">Original</string>
    <string name="permission_title">Permission Required</string>
    <string name="permission_message">This app needs access to your photos and camera to create collages. Please grant permission to continue.</string>
    <string name="permission_denied_title">Permission Denied</string>
    <string name="permission_denied_message">You have selected "Don\'t ask again". Please go to Settings to grant permission manually.</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="go_to_settings">Go to Settings</string>
    <string name="make_another">✨ Make Another</string>
    <string name="image_not_ready">Image not ready, please wait</string>
    <string name="app_not_installed">App not installed</string>
    <string name="unable_to_read_image_file">Unable to read image file</string>
    <string name="background_removal_failed">Background removal failed</string>
    <string name="transform">Transform</string>
    <string name="flip_horizontal">Flip H</string>
    <string name="flip_vertical">Flip V</string>
    <string name="crop_free">Free</string>
    <string name="brush_size">Size</string>
    <string name="add_text">Add Text</string>
    <string name="type_something">Type something…</string>
    <string name="font">Font</string>
    <string name="color">Color</string>
    <string name="draw">Draw</string>
    <string name="please_enter_the_content">Please enter the content.</string>
    <string name="crop_failed">Crop failed</string>
    <string name="please_fill_all_frames">Please add a photo to every frame before saving.</string>
    <string name="the_photo_was_not_prepared">The photo was not prepared.</string>
    <string name="no_image_to_crop_yet">No image to crop yet.</string>
    <string name="no_subject_image">No subject image</string>
    <string name="unable_to_create_text">Unable to create text</string>
    <string name="image_saving_failed">Image saving failed</string>
    <string name="the_image_box">The image box has not been selected.</string>

    <!-- ===== Premium / IAP screen ===== -->
    <string name="iap_title_line1">Photo Collage</string>
    <string name="iap_title_line2">Premium</string>
    <string name="iap_yearly_plan">Yearly Plan</string>
    <string name="iap_billed_yearly">Billed yearly</string>
    <string name="iap_per_year">/year</string>
    <string name="iap_weekly_plan">Weekly Plan</string>
    <string name="iap_bill_weekly">Bill weekly</string>
    <string name="iap_per_week">/week</string>
    <string name="iap_subscribe_now">Subscribe Now</string>
    <string name="iap_cancel_anytime">You can unsubscribe at any time</string>
    <string name="iap_best_choice">Best choice</string>
    <string name="iap_terms">Terms &amp; Conditions</string>
    <string name="iap_privacy_policy">Privacy Policy</string>
    <string name="iap_feature_1">Exclusive layouts for IG Stories &amp; Reels</string>
    <string name="iap_feature_2">Uninterrupted creative experience</string>
    <string name="iap_feature_3">Crystal clear quality up to 4K</string>
    <string name="iap_restore">Restore Purchases</string>
    <string name="iap_save">Save %1$d%%</string>
    <string name="iap_price_per_week">only %1$s/week</string>
    <string name="iap_no_purchase">No active purchase found</string>
    <string name="iap_remove_watermark">Remove Watermark</string>
    <string name="iap_start_trial">Start Free Trial</string>
    <string name="iap_trial_then">%1$d-day free trial, then %2$s · Cancel anytime</string>
    <string name="iap_premium_feature_title">Premium Feature</string>
    <string name="iap_premium_feature_msg">Unlock premium templates &amp; tools, watermark-free export and an ad-free experience with Premium.</string>
    <string name="iap_go_premium">Go Premium</string>
    <string name="iap_continue">Continue</string>
    <string name="iap_benefit_1">All premium templates &amp; tools</string>
    <string name="iap_benefit_2">No watermark on exports</string>
    <string name="iap_benefit_3">Ad-free experience</string>
    <string name="iap_remove_ads_title">Remove ads forever?</string>

</resources>