<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llDialogDelete"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/bg_dialog_draft"
    android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete_drafts"
            android:textColor="#1D2939"
            android:textSize="@dimen/font_16sp"
            android:fontFamily="@font/inter_medium"
            android:layout_gravity="center"
            android:gravity="center"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drafts_will_be_lost_if_you_unistall"
            android:textColor="#98A2B3"
            android:textSize="14sp"
            android:fontFamily="@font/inter_regular"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="@dimen/dimen_8dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dimen_16dp"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_marginBottom="20dp"
        >

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="#1D2939"
            android:background="@drawable/bg_dialog_cancel"
            android:textSize="14sp"
            android:fontFamily="@font/inter_medium"
            android:textAllCaps="false"
            android:layout_marginStart="@dimen/dimen_16dp"
            android:layout_marginEnd="6dp"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:background="@drawable/bg_dialog_delete"
            android:textSize="14sp"
            android:fontFamily="@font/inter_medium"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/dimen_16dp"
            android:layout_marginStart="6dp"
            />

    </LinearLayout>


</LinearLayout>