<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    tools:context=".MyDraftActivity">

    <RelativeLayout
        android:id="@+id/layoutBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:layout_marginHorizontal="@dimen/dimen_16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:padding="@dimen/dimen_8dp"
            android:src="@drawable/ic_back_new"
            android:layout_centerVertical="true"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#1D2939"
            android:textSize="@dimen/font_16sp"
            android:fontFamily="@font/inter_medium"
            android:layout_toEndOf="@+id/btn_back"
            android:text="@string/my_draft"
            android:layout_marginStart="@dimen/dimen_8dp"
            android:layout_centerVertical="true"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select"
            android:layout_alignParentEnd="true"
            android:elevation="0dp"
            android:textColor="#1D2939"
            android:textSize="@dimen/font_16sp"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/dimen_8dp"
            android:layout_centerVertical="true"
            android:visibility="visible"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_alignParentEnd="true"
            android:elevation="0dp"
            android:textColor="#1D2939"
            android:textSize="@dimen/font_16sp"
            android:fontFamily="@font/inter_medium"
            android:padding="@dimen/dimen_8dp"
            android:layout_centerVertical="true"
            android:visibility="gone"
            />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llEmptyDraft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:gravity="center"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_empty_draft"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_drafts_yet"
            android:textColor="#1D2939"
            android:textSize="@dimen/font_16sp"
            android:fontFamily="@font/inter_semi_bold"
            android:layout_marginTop="@dimen/dimen_16dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/let_s_create_your_first_one"
            android:textColor="#98A2B3"
            android:textSize="14sp"
            android:fontFamily="@font/inter_regular"
            android:layout_marginTop="4dp"
            />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvDrafts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutBar"
        android:layout_marginHorizontal="12dp"
        android:layout_above="@+id/layoutDelete"
        android:overScrollMode="never"
        android:visibility="gone"
        />

    <LinearLayout
        android:id="@+id/layoutDelete"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_above="@+id/layoutAds"
        android:background="#F97066"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_trash"
            android:layout_marginEnd="8dp"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete(0)"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:fontFamily="@font/inter_medium"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutAds"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:visibility="visible">

        <FrameLayout
            android:id="@+id/ad_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff" />

        <include
            android:id="@+id/banner"
            layout="@layout/banner_ads"
            android:visibility="visible" />
    </LinearLayout>


</RelativeLayout>
</layout>